--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "typeface-poppins": "^1.1.13",
+    "vite": "^6.3.3",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
