--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,8 @@
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/typeface-poppins/index.css",
-              "src/styles/styles.scss"
+              "src/styles/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [ "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"]
           },
