add transaltion features dependency
add ngx-translate package and ad it to shared module to be seen around different modules and add initial translation files

--- a/angular.json
+++ b/angular.json
@@ -104,6 +104,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              }, {
+                "glob": "**/*",
+                "input": "src/assets/i18n"
               }
             ],
             "styles": [
