load bootstrap depending on lang dir

--- a/angular.json
+++ b/angular.json
@@ -45,7 +45,16 @@
             ],
            "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-             "node_modules/bootstrap/dist/css/bootstrap.min.css",
+               {
+                    "input": "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                    "bundleName": "bootstrap-ltr",
+                    "inject": false
+                  },
+                  {
+                    "input": "node_modules/bootstrap/dist/css/bootstrap.rtl.min.css",
+                    "bundleName": "bootstrap-rtl",
+                    "inject": false
+                  },
               "node_modules/typeface-poppins/index.css",
               "src/styles/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
