--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,7 @@
                     "inject": false
                   },
               "node_modules/typeface-poppins/index.css",
+                "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/styles/styles.scss",
               "node_modules/ngx-toastr/toastr.css"
             ],
