--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@ng-select/ng-select": "^14.7.0",
     "@ngx-translate/core": "^16.0.4",
     "@ngx-translate/http-loader": "^16.0.1",
     "bootstrap": "^5.3.5",
