--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,11 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },{
+                  "glob": "**/*",
+                  "input": "src/assets",
+                  "output": "assets"
+                }
             ],
            "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
